[tool.poetry]
name = "repass-client"
version = "0.1.0"
description = ""
authors = ["Thomas Kilian <thomas.kilian@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.8"
fido2 = "^0.9.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
